# mpcfill-python

./: .gitignore  README.md  pyproject.toml
examples/: download.py  download_best.py  list_catalog.py  query_and_download.py  search_table.py
src/mpcfill/: __init__.py  api.py  cli.py  client.py  commands.py  exceptions.py  http.py  operations.py  search.py  search_settings.py  types.py  utils.py
src/mpcfill/api/: __init__.py  api.py  rate_limiter.py
src/mpcfill/core/: types.py
src/mpcfill/data/: sources.json  tag_hierarchy.json
src/mpcfill/filters/: __init__.py  card_type.py  languages.py  tag_utils.py  tags.py
src/mpcfill/http/: client.py  rate_limiter.py
src/mpcfill/models/: __init__.py  card.py  source_filter.py  sources.py
src/mpcfill/services/: catalog.py
